--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>this website under construction</h1>
+    <h1>This website under construction</h1>
+    <h2>coming soon</h2>
 
 </body>
 
