--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 4</title>
+	<title>TK Properties</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -28,14 +28,14 @@
 		<span></span>
 		<div class="flex-col-c p-t-50 p-b-50">
 			<h3 class="l1-txt1 txt-center p-b-10">
-				Coming Soon
+				TK Properties
 			</h3>
 
 			<p class="txt-center l1-txt2 p-b-60">
 				Our website is under construction
 			</p>
 
-			<div class="flex-w flex-c cd100 p-b-82">
+			<!-- <div class="flex-w flex-c cd100 p-b-82">
 				<div class="flex-col-c-m size2 how-countdown">
 					<span class="l1-txt3 p-b-9 days">35</span>
 					<span class="s1-txt1">Days</span>
@@ -55,16 +55,16 @@
 					<span class="l1-txt3 p-b-9 seconds">39</span>
 					<span class="s1-txt1">Seconds</span>
 				</div>
-			</div>
+			</div> -->
 
 			<button class="flex-c-m s1-txt2 size3 how-btn"  data-toggle="modal" data-target="#subscribe">
 				Follow us for update now!
 			</button>
 		</div>
 
-		<span class="s1-txt3 txt-center">
+		<!-- <span class="s1-txt3 txt-center">
 			@ 2017 Coming Soon Template. Designed by Colorlib
-		</span>
+		</span> -->
 		
 	</div>
 
@@ -76,37 +76,10 @@
 					<i class="zmdi zmdi-close"></i>
 				</button>
 
-				<div class="wsize1 m-lr-auto">
-					<h3 class="m1-txt1 txt-center p-b-36">
-						<span class="bor1 p-b-6">Subscribe</span>
-					</h3>
 
-					<p class="m1-txt2 txt-center p-b-40">
-						Follow us for update now!
-					</p>
+			<!-- get in touch -->
+			
 
-					<form class="contact100-form validate-form">
-						<div class="wrap-input100 m-b-10 validate-input" data-validate = "Name is required">
-							<input class="s1-txt4 placeholder0 input100" type="text" name="name" placeholder="Name">
-							<span class="focus-input100"></span>
-						</div>
-
-						<div class="wrap-input100 m-b-20 validate-input" data-validate = "Email is required: ex@abc.xyz">
-							<input class="s1-txt4 placeholder0 input100" type="text" name="email" placeholder="Email">
-							<span class="focus-input100"></span>
-						</div>
-
-						<div class="w-full">
-							<button class="flex-c-m s1-txt2 size5 how-btn1 trans-04">
-								Get Updates
-							</button>
-						</div>
-					</form>
-
-					<p class="s1-txt5 txt-center wsize2 m-lr-auto p-t-20">
-						And don’t worry, we hate spam too! You can unsubcribe at anytime.
-					</p>
-				</div>
 			</div>
 
 		</div>
